test/corpus/symbolic-array-type-representation.txt
================================================================================
Symbolic Array Type Representation
================================================================================

java.lang.String/1
String/1
double/2

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name))
  (sym_lit
    (sym_ns)
    (sym_name))
  (sym_lit
    (sym_ns)
    (sym_name)))

